--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,8 @@ body {
   --color-primary-600: #480264;
   --color-primary-700: #3d0264;
 
+  --color-secondary: #1f2937;
+
   --color-success-100: #a2f0bc;
   --color-success-500: #12bd4b;
 
