--- a/components/layout/logo.module.css
+++ b/components/layout/logo.module.css
@@ -1,9 +1,26 @@
+/* logos css 추가 */
+.logos {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 */
+}
+
 .logo {
   text-transform: uppercase;
   font-size: var(--size-5);
   font-weight: bold;
   font-family: "Oswald", sans-serif;
   color: var(--color-grey-50);
+}
+.image {
+  width: 50px;
+  height: 50px;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: var(--color-grey-700);
+  margin: auto;
 }
 
 @media (min-width: 768px) {
