--- a/components/layout/footer.module.css
+++ b/components/layout/footer.module.css
@@ -12,7 +12,6 @@
 }
 
 .info strong {
-  /* color: #0070f3;   */
   color: var(--color-primary-700);
 }
 
@@ -28,5 +27,5 @@
 }
 
 .icon:hover {
-  color: #0070f3; /* 아이콘 hover 시 강조 색상 */
+  color: #0070f3;
 }
