--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -1,29 +1,122 @@
+.container {
+  position: relative;
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 2rem;
+}
+
 .content {
   width: 95%;
   max-width: 60rem;
   margin: var(--size-8) auto;
-  font-size: var(--size-5);
   line-height: var(--size-8);
-  border-radius: 6px;
   padding: var(--size-4);
 }
 
-.content p {
-  color: var(--color-grey-100);
+.contents p {
+  margin: var(--size-3) 0;
+  font-size: var(--size-5);
 }
 
-/* .content img {
-  max-width: 200px;
-} */
+.contents h1,
+.contents h2,
+.contents h3 {
+  scroll-margin-top: 15vh;
+}
 
-.content .image {
-  margin: var(--size-4) auto;
-  width: 100%;
-  max-width: 600px;
+.contents h1 {
+  font-size: var(--size-16);
+  border-bottom: 3px solid var(--color-grey-300);
+  padding-bottom: var(--size-4);
+  text-align: center;
+  margin-bottom: var(--size-8);
+}
+
+.contents h2 {
+  font-size: var(--size-8);
+  border-left: 4px solid var(--color-primary-300);
+  padding-left: var(--size-4);
+  margin: var(--size-16) 0 var(--size-4);
+}
+
+.contents h3 {
+  font-size: var(--size-6);
+  margin: var(--size-8) 0 var(--size-4);
+  display: inline-block;
+}
+
+.contents :global(code:not(pre code)) {
+  background-color: var(--color-grey-400);
+  padding: 0.1em 0.3em;
+  border-radius: 3px;
+}
+
+.contents a {
+  color: var(--color-href-100);
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+.contents a:hover {
+  color: var(--color-href-500);
+  text-decoration: underline;
+}
+
+.contents strong {
+  color: var(--color-primary-100);
+  font-weight: 700;
+}
+
+.contents hr {
+  border: none;
+  border-top: 2px solid var(--color-grey-600);
+  margin: var(--size-8) 0;
+}
+
+.contents em {
+  color: var(--color-grey-200);
 }
 
 @media (min-width: 768px) {
   .content {
     padding: var(--size-8);
   }
+  .contents :global(h1) {
+    font-size: calc(var(--size-16) * 1.2);
+  }
+  .contents :global(h2) {
+    font-size: calc(var(--size-8) * 1.2);
+  }
+
+  .contents :global(h3) {
+    font-size: calc(var(--size-6) * 1.2);
+  }
+
+  .contents blockquote {
+    margin: var(--size-4) 0;
+    padding: var(--size-4);
+    background-color: var(--color-grey-800);
+    border-radius: 4px;
+    font-style: italic;
+    color: var(--color-grey-300);
+  }
+
+  .contents blockquote p {
+    margin: 0;
+  }
+}
+
+.tocWrapper {
+  border-left: 4px solid var(--color-primary-300);
+  position: sticky;
+  top: 12rem;
+  height: fit-content;
+  width: 250px;
+  margin-top: var(--size-8);
+}
+
+.content .image {
+  margin: var(--size-4) auto;
+  width: 100%;
+  max-width: 600px;
 }
