--- a/components/posts/post-detail/post-header.module.css
+++ b/components/posts/post-detail/post-header.module.css
@@ -1,6 +1,6 @@
 .header {
   padding-bottom: var(--size-8);
-  border-bottom: 8px solid var(--color-grey-900);
+  border-bottom: 8px solid;
   margin: var(--size-4) 0;
   display: flex;
   flex-direction: column-reverse;
@@ -10,8 +10,7 @@
 }
 
 .header h1 {
-  font-size: var(--size-8);
-  color: var(--color-grey-500);
+  font-size: var(--size-5);
   margin: 0;
   line-height: initial;
   text-align: center;
@@ -31,7 +30,7 @@
   }
 
   .header h1 {
-    font-size: var(--size-16);
+    font-size: var(--size-8);
     text-align: left;
   }
 }
