--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto&family=Source+Sans+Pro:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300;400&family=Source+Sans+Pro:wght@300;400;500&family=Noto+Sans+KR:wght@400;500;700&family=Do+Hyeon&family=Nanum+Gothic:wght@400;700&display=swap");
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: "Morganite";
+  src: url("/fonts/Morganite/Morganite-Black.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
@@ -29,6 +30,8 @@ body {
   --color-primary-700: #3d0264;
 
   --color-secondary: #1f2937;
+  --color-href-100: #3b82f6;
+  --color-href-500: #60a5fa;
 
   --color-success-100: #a2f0bc;
   --color-success-500: #12bd4b;
@@ -51,13 +54,23 @@ body {
   /* 기본 배경 변경 */
   background-color: var(--color-secondary);
   color: #b1b0b0;
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
 }
 
-h1,
-h2,
+h1 {
+  font-family: "Noto Sans KR", "Oswald", sans-serif;
+}
+
+h2 {
+  font-family: "Noto Sans KR", "Source Sans Pro", sans-serif;
+}
+
 h3 {
-  font-family: "Oswald", "Roboto", sans-serif;
+  font-family: "Noto Sans KR";
+}
+
+p {
+  font-family: "Noto Sans KR", "Source Sans Pro", sans-serif;
 }
 
 a {
@@ -69,7 +82,6 @@ button {
   cursor: pointer;
 }
 
-/* styles/globals.css */
 .page-enter {
   opacity: 0;
   transform: translateY(20px);
