--- a/components/contact/contact-form.module.css
+++ b/components/contact/contact-form.module.css
@@ -5,6 +5,7 @@
   max-width: 50rem;
   padding: var(--size-4);
   font-size: var(--size-6);
+  min-height: calc(100vh - 220px);
 }
 
 .contact h1 {
@@ -27,6 +28,7 @@
   border: 1px solid var(--color-grey-400);
   background-color: var(--color-grey-50);
   resize: none;
+  color: var(--color-grey-900);
 }
 
 .controls {
