--- a/components/posts/post-item.module.css
+++ b/components/posts/post-item.module.css
@@ -5,6 +5,18 @@
   border-radius: 19px;
   overflow: hidden;
 }
+
+.image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
+}
+
+.post:hover .image img {
+  transform: scale(1.1);
+}
+
 .tag {
   display: inline-block;
   background-color: var(--color-primary-500);
