--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -23,6 +23,7 @@
 .contents h2,
 .contents h3 {
   scroll-margin-top: 15vh;
+  line-height: 1.3;
 }
 
 .contents h1 {
@@ -68,7 +69,7 @@
   border-radius: 3px;
 }
 .contents strong {
-  color: var(--color-primary-100);
+  color: var(--color-primary-200);
   font-weight: 700;
 }
 
@@ -80,6 +81,58 @@
 
 .contents em {
   color: var(--color-grey-200);
+}
+
+.contents table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: var(--size-4) 0;
+}
+
+.contents th,
+.contents td {
+  border: 1px solid var(--color-grey-600);
+  padding: var(--size-2) var(--size-4);
+  text-align: left;
+}
+
+.contents th {
+  background-color: var(--color-grey-800);
+  color: var(--color-grey-100);
+  font-weight: bold;
+}
+
+.contents ul {
+  list-style: none;
+  padding-left: var(--size-4);
+}
+
+.contents ul li {
+  position: relative;
+  padding-left: var(--size-6);
+  margin: var(--size-1) 0;
+}
+
+.contents ul li::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0.7em;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: var(--color-primary-300);
+}
+
+/* 중첩된 리스트 스타일 */
+.contents ul ul {
+  margin: var(--size-2) 0;
+}
+
+.contents ul ul li::before {
+  width: 5px;
+  height: 5px;
+  background-color: var(--color-grey-400);
 }
 
 @media (min-width: 768px) {
