--- a/components/posts/post-item.module.css
+++ b/components/posts/post-item.module.css
@@ -1,12 +1,17 @@
 .post {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  background-color: var(--color-grey-800);
   text-align: center;
-  border-radius: 19px;
   overflow: hidden;
 }
 
+.image {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  border-radius: 19px;
+}
+
 .image img {
+  aspect-ratio: 16 / 9;
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -17,52 +22,47 @@
   transform: scale(1.1);
 }
 
+.overlayContent {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: var(--color-grey-100);
+  opacity: 0;
+  padding: var(--size-6);
+  transition: opacity 0.3s ease;
+  z-index: 2;
+}
+
+.post:hover .overlayContent {
+  opacity: 1;
+}
+
+.tags {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  display: flex;
+  z-index: 1;
+  gap: 0.4rem;
+}
+
 .tag {
   display: inline-block;
-  background-color: var(--color-primary-500);
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  font-size: var(--size-3);
-  font-weight: 600;
-  margin: 0.5rem;
+  font-size: var(--size-4);
+  font-weight: 500;
   transition: background-color 0.3s ease;
-  position: relative;
-}
-
-.tag::after {
-  content: "";
-  position: absolute;
-  left: -19px;
-  top: 50%;
-  transform: translateY(-50%) rotate(90deg);
-  width: 0;
-  height: 0;
-  border-left: 13px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 14px solid var(--color-primary-500);
-  transition: border-top-color 0.3s ease;
-}
-
-.tag:hover {
-  background-color: var(--color-primary-300);
-}
-
-.tag:hover::after {
-  border-top-color: var(--color-primary-300);
-}
-
-.post a {
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
   color: var(--color-grey-100);
-}
-
-.image {
-  width: 100%;
-  max-height: 20rem;
-  overflow: hidden;
-}
-
-.image img {
-  object-fit: cover;
 }
 
 .content {
@@ -70,8 +70,8 @@
 }
 
 .content h3 {
-  margin: var(--size-2) 0;
-  font-size: var(--size-5);
+  font-size: 1.1rem;
+  font-weight: 600;
 }
 
 .content time {
