--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -4,6 +4,7 @@
   max-width: 1200px;
   margin: 0 auto;
   gap: 2rem;
+  min-height: calc(100vh - 156px);
 }
 
 .content {
@@ -26,11 +27,9 @@
 }
 
 .contents h1 {
-  font-size: var(--size-16);
-  border-bottom: 3px solid var(--color-grey-300);
-  padding-bottom: var(--size-4);
-  text-align: center;
-  margin-bottom: var(--size-8);
+  font-size: var(--size-8);
+  border-bottom: 1px solid var(--color-grey-300);
+  margin: var(--size-16) 0 var(--size-2);
 }
 
 .contents h2 {
@@ -137,7 +136,7 @@
     padding: var(--size-8);
   }
   .contents h1 {
-    font-size: calc(var(--size-16) * 1.2);
+    font-size: calc(var(--size-8) * 1.2);
   }
   .contents h2 {
     font-size: calc(var(--size-6) * 1.2);
@@ -196,7 +195,7 @@
   position: sticky;
   top: 9rem;
   height: fit-content;
-  width: 250px;
+  width: 240px;
   margin-top: var(--size-8);
 }
 
