fix: postitem image 레이아웃 조절, 안쓰는 폰트 삭제

--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -106,8 +106,8 @@
 
 .contents ul li {
   position: relative;
-  padding-left: var(--size-6);
-  margin: var(--size-1) 0;
+  padding-left: var(--size-3);
+  margin: var(--size-1);
 }
 
 .contents ul li::before {
