--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -28,20 +28,21 @@
 
 .contents h1 {
   font-size: var(--size-10);
-  border-bottom: 1px solid var(--color-grey-300);
-  margin: var(--size-16) 0 var(--size-2);
+  margin: var(--size-8) 0 var(--size-1);
 }
 
 .contents h2 {
   font-size: var(--size-8);
-  margin: var(--size-8) 0 var(--size-1);
+  border-bottom: 1px solid var(--color-grey-300);
+  margin: var(--size-16) 0 var(--size-3);
+  padding-bottom: var(--size-2);
 }
 
 .contents h3 {
   font-size: var(--size-6);
   border-left: 4px solid var(--color-primary-300);
   padding-left: var(--size-4);
-  margin: var(--size-16) 0 var(--size-4);
+  margin: var(--size-10) 0 var(--size-4);
 }
 
 .contents :global(code:not(pre code)) {
@@ -157,37 +158,6 @@
   .contents blockquote p {
     margin: 0;
   }
-}
-
-.codeHeader {
-  display: flex;
-  align-items: center;
-  background-color: var(--color-grey-800);
-  color: var(--color-grey-300);
-  padding: 0.3rem 1rem;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  font-size: 0.9rem;
-  border: 1px solid var(--color-grey-700);
-  border-bottom: none;
-}
-
-.codeHeader .language {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.codeHeader .language::before {
-  content: "•";
-  color: var(--color-primary-400);
-}
-
-.codeHeader + pre {
-  margin-top: 0 !important;
-  border-top-left-radius: 0 !important;
-  border-top-right-radius: 0 !important;
-  border: 1px solid var(--color-grey-700) !important;
 }
 
 .tocWrapper {
