--- a/components/posts/post-detail/post-table.module.css
+++ b/components/posts/post-detail/post-table.module.css
@@ -7,7 +7,7 @@
 }
 
 .tocItem {
-  margin: 8px 20;
+  margin: 6px 20;
   transition: all 0.2s ease;
 }
 
@@ -15,8 +15,9 @@
   text-decoration: none;
   transition: color 0.2s ease;
   display: block;
-  padding: 4px 0;
-  font-weight: 600;
+  padding: 3px 0;
+  font-weight: 400;
+  font-size: 1.6ch;
 }
 
 .tocLink:hover {
