--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?&family=Roboto:wght@300;400&family=Source+Sans+Pro:wght@300;400;500&family=Noto+Sans+KR:wght@400;500;700&family=Do+Hyeon&family=Nanum+Gothic:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
+
+h1,
+h2,
+h3,
+p {
+  font-family: "Inter", sans-serif;
+}
 
 @font-face {
   font-family: "Morganite";
