--- a/components/posts/category-filter.module.css
+++ b/components/posts/category-filter.module.css
@@ -1,16 +1,17 @@
 .categoryFilter {
   display: flex;
-  gap: 10px;
-  margin-bottom: 20px;
+  gap: 11px;
+  padding: 10px;
+  border-radius: 8px;
 }
-.button {
-  padding: 8px 12px;
-  border: none;
-  cursor: pointer;
-  background-color: #f0f0f0;
-  border-radius: 5px;
-}
+
 .active {
-  background-color: #0070f3;
-  color: white;
+  font-weight: bold;
+}
+
+.button {
+  padding: 8px 20px;
+  border: 2px solid; /* 기본 테두리 */
+  border-radius: 20px; /* 둥근 테두리 */
+  transition: all 0.3s ease;
 }
