play/music 탭 추가, 일부 css 수정

--- a/components/posts/category-filter.module.css
+++ b/components/posts/category-filter.module.css
@@ -2,11 +2,10 @@
   display: flex;
   gap: 11px;
   padding: 10px;
-  /* background-color: gray; */
 }
 
 .active {
-  font-weight: bold;
+  color: black;
 }
 
 .button {
